json postgres, postgres batch streaming via readonly