@@ -68,19 +68,19 @@ public class TestMSSQLServer implements TestDB {
         int[] sqlTypes2 = { Types.INTEGER, Types.INTEGER };
         l = sql.getString(mySqls[++n], bindVars2a, sqlTypes2);
         Test.test(l == null, typ + n);
-        Object[] bindVars2b = { new Integer(1), new Integer(2) };
+        Object[] bindVars2b = { Integer.valueOf(1), Integer.valueOf(2) };
         l = sql.getString(mySqls[++n], bindVars2b, sqlTypes2);
         Test.test(l != null, typ + n);
 
         // getStrings
         String[] ll = sql.getStrings(mySqls[++n]);
         Test.test(ll != null && ll.length == 100, typ + n);
-        ll = sql.getStringsVarArgs(mySqls[++n], new Integer(0));
+        ll = sql.getStringsVarArgs(mySqls[++n], Integer.valueOf(0));
         Test.test(ll != null && ll.length == 100, typ + n);
-        Object[] bindVars3 = { new Integer(0) };
+        Object[] bindVars3 = { Integer.valueOf(0) };
         ll = sql.getStrings(mySqls[++n], bindVars3);
         Test.test(ll != null && ll.length == 100, typ + n);
-        Object[] bindVars4 = { null, null, new Integer(0) };
+        Object[] bindVars4 = { null, null, Integer.valueOf(0) };
         int[] sqlTypes4 = { Types.INTEGER, Types.VARCHAR, Types.INTEGER };
         ll = sql.getStrings(mySqls[++n], bindVars4, sqlTypes4);
         Test.test(ll != null && ll.length == 100, typ + n);
@@ -105,19 +105,19 @@ public class TestMSSQLServer implements TestDB {
         int[] sqlTypes2 = { Types.INTEGER, Types.INTEGER };
         l = sql.getLong(mySqls[++n], bindVars2a, sqlTypes2);
         Test.test(l == null, typ + n);
-        Object[] bindVars2b = { new Integer(1), new Integer(2) };
+        Object[] bindVars2b = { Integer.valueOf(1), Integer.valueOf(2) };
         l = sql.getLong(mySqls[++n], bindVars2b, sqlTypes2);
         Test.test(l != null, typ + n);
 
         // getLongs
         Long[] ll = sql.getLongs(mySqls[++n]);
         Test.test(ll != null && ll.length == 100, typ + n);
-        ll = sql.getLongsVarArgs(mySqls[++n], new Integer(0));
+        ll = sql.getLongsVarArgs(mySqls[++n], Integer.valueOf(0));
         Test.test(ll != null && ll.length == 100, typ + n);
-        Object[] bindVars3 = { new Integer(0) };
+        Object[] bindVars3 = { Integer.valueOf(0) };
         ll = sql.getLongs(mySqls[++n], bindVars3);
         Test.test(ll != null && ll.length == 100, typ + n);
-        Object[] bindVars4 = { null, null, new Integer(0) };
+        Object[] bindVars4 = { null, null, Integer.valueOf(0) };
         int[] sqlTypes4 = { Types.INTEGER, Types.INTEGER, Types.INTEGER };
         ll = sql.getLongs(mySqls[++n], bindVars4, sqlTypes4);
         Test.test(ll != null && ll.length == 100, typ + n);
@@ -142,19 +142,19 @@ public class TestMSSQLServer implements TestDB {
         int[] sqlTypes2 = { Types.INTEGER, Types.INTEGER };
         l = sql.getBigDecimal(mySqls[++n], bindVars2a, sqlTypes2);
         Test.test(l == null, typ + n);
-        Object[] bindVars2b = { new Integer(1), new Integer(2) };
+        Object[] bindVars2b = { Integer.valueOf(1), Integer.valueOf(2) };
         l = sql.getBigDecimal(mySqls[++n], bindVars2b, sqlTypes2);
         Test.test(l != null, typ + n);
 
         // getBigDecimals
         BigDecimal[] ll = sql.getBigDecimals(mySqls[++n]);
         Test.test(ll != null && ll.length == 100, typ + n);
-        ll = sql.getBigDecimalsVarArgs(mySqls[++n], new Integer(0));
+        ll = sql.getBigDecimalsVarArgs(mySqls[++n], Integer.valueOf(0));
         Test.test(ll != null && ll.length == 100, typ + n);
-        Object[] bindVars3 = { new Integer(0) };
+        Object[] bindVars3 = { Integer.valueOf(0) };
         ll = sql.getBigDecimals(mySqls[++n], bindVars3);
         Test.test(ll != null && ll.length == 100, typ + n);
-        Object[] bindVars4 = { null, null, new Integer(0) };
+        Object[] bindVars4 = { null, null, Integer.valueOf(0) };
         int[] sqlTypes4 = { Types.INTEGER, Types.INTEGER, Types.INTEGER };
         ll = sql.getBigDecimals(mySqls[++n], bindVars4, sqlTypes4);
         Test.test(ll != null && ll.length == 100, typ + n);
@@ -179,19 +179,19 @@ public class TestMSSQLServer implements TestDB {
         int[] sqlTypes2 = { Types.INTEGER, Types.INTEGER };
         l = sql.getTimestamp(mySqls[++n], bindVars2a, sqlTypes2);
         Test.test(l == null, typ + n);
-        Object[] bindVars2b = { new Integer(1), new Integer(2) };
+        Object[] bindVars2b = { Integer.valueOf(1), Integer.valueOf(2) };
         l = sql.getTimestamp(mySqls[++n], bindVars2b, sqlTypes2);
         Test.test(l != null, typ + n);
 
         // getTimestamps
         Timestamp[] ll = sql.getTimestamps(mySqls[++n]);
         Test.test(ll != null && ll.length == 100, typ + n);
-        ll = sql.getTimestampsVarArgs(mySqls[++n], new Integer(0));
+        ll = sql.getTimestampsVarArgs(mySqls[++n], Integer.valueOf(0));
         Test.test(ll != null && ll.length == 100, typ + n);
-        Object[] bindVars3 = { new Integer(0) };
+        Object[] bindVars3 = { Integer.valueOf(0) };
         ll = sql.getTimestamps(mySqls[++n], bindVars3);
         Test.test(ll != null && ll.length == 100, typ + n);
-        Object[] bindVars4 = { null, null, new Integer(0) };
+        Object[] bindVars4 = { null, null, Integer.valueOf(0) };
         int[] sqlTypes4 = { Types.INTEGER, Types.TIMESTAMP, Types.INTEGER };
         ll = sql.getTimestamps(mySqls[++n], bindVars4, sqlTypes4);
         Test.test(ll != null && ll.length == 100, typ + n);
@@ -216,19 +216,19 @@ public class TestMSSQLServer implements TestDB {
         int[] sqlTypes2 = { Types.INTEGER, Types.INTEGER };
         l = sql.getRaw(mySqls[++n], bindVars2a, sqlTypes2);
         Test.test(l == null, typ + n);
-        Object[] bindVars2b = { new Integer(1), new Integer(2) };
+        Object[] bindVars2b = { Integer.valueOf(1), Integer.valueOf(2) };
         l = sql.getRaw(mySqls[++n], bindVars2b, sqlTypes2);
         Test.test(l != null, typ + n);
 
         // getRaws
         byte[][] ll = sql.getRaws(mySqls[++n]);
         Test.test(ll != null && ll.length == 100, typ + n);
-        ll = sql.getRawsVarArgs(mySqls[++n], new Integer(0));
+        ll = sql.getRawsVarArgs(mySqls[++n], Integer.valueOf(0));
         Test.test(ll != null && ll.length == 100, typ + n);
-        Object[] bindVars3 = { new Integer(0) };
+        Object[] bindVars3 = { Integer.valueOf(0) };
         ll = sql.getRaws(mySqls[++n], bindVars3);
         Test.test(ll != null && ll.length == 100, typ + n);
-        Object[] bindVars4 = { null, null, new Integer(0) };
+        Object[] bindVars4 = { null, null, Integer.valueOf(0) };
         int[] sqlTypes4 = { Types.INTEGER, Types.VARBINARY, Types.INTEGER };
         ll = sql.getRaws(mySqls[++n], bindVars4, sqlTypes4);
         Test.test(ll != null && ll.length == 100, typ + n);
