@@ -69,34 +69,34 @@ public class TestMySQL implements TestDB {
         l = sql.getString(mySqls[++n]);
         Test.test(l != null, typ + n);
 
-        l = sql.getStringVarArgs(mySqls[++n], new Integer(1));
+        l = sql.getStringVarArgs(mySqls[++n], Integer.valueOf(1));
         Test.test(l == null, typ + n);
-        l = sql.getStringVarArgs(mySqls[++n], new Integer(1));
+        l = sql.getStringVarArgs(mySqls[++n], Integer.valueOf(1));
         Test.test(l != null, typ + n);
 
-        Object[] bindVars = { new Integer(1) };
+        Object[] bindVars = { Integer.valueOf(1) };
         l = sql.getString(mySqls[++n], bindVars);
         Test.test(l == null, typ + n);
         l = sql.getString(mySqls[++n], bindVars);
         Test.test(l != null, typ + n);
 
-        Object[] bindVars2a = { null, null, new Integer(1) };
+        Object[] bindVars2a = { null, null, Integer.valueOf(1) };
         int[] sqlTypes2 = { Types.INTEGER, Types.INTEGER, Types.INTEGER };
         l = sql.getString(mySqls[++n], bindVars2a, sqlTypes2);
         Test.test(l == null, typ + n);
-        Object[] bindVars2b = { new Integer(1), new Integer(2), new Integer(1) };
+        Object[] bindVars2b = { Integer.valueOf(1), Integer.valueOf(2), Integer.valueOf(1) };
         l = sql.getString(mySqls[++n], bindVars2b, sqlTypes2);
         Test.test(l != null, typ + n);
 
         // getStrings
         String[] ll = sql.getStrings(mySqls[++n]);
         Test.test(ll != null && ll.length == 100, typ + n);
-        ll = sql.getStringsVarArgs(mySqls[++n], new Integer(0));
+        ll = sql.getStringsVarArgs(mySqls[++n], Integer.valueOf(0));
         Test.test(ll != null && ll.length == 100, typ + n);
-        Object[] bindVars3 = { new Integer(0) };
+        Object[] bindVars3 = { Integer.valueOf(0) };
         ll = sql.getStrings(mySqls[++n], bindVars3);
         Test.test(ll != null && ll.length == 100, typ + n);
-        Object[] bindVars4 = { null, "bla", new Integer(0) };
+        Object[] bindVars4 = { null, "bla", Integer.valueOf(0) };
         int[] sqlTypes4 = { Types.INTEGER, Types.VARCHAR, Types.INTEGER };
         //select $col from sqlutil_data where $col is null and (? is null or $col =?) and v_serial>? limit 100
         ll = sql.getStrings(mySqls[++n], bindVars4, sqlTypes4);
@@ -118,35 +118,35 @@ public class TestMySQL implements TestDB {
         l = sql.getLong(mySqls[++n]);
         Test.test(l != null, typ + n);
 
-        l = sql.getLongVarArgs(mySqls[++n], new Integer(1));
+        l = sql.getLongVarArgs(mySqls[++n], Integer.valueOf(1));
         Test.test(l == null, typ + n);
-        l = sql.getLongVarArgs(mySqls[++n], new Integer(1));
+        l = sql.getLongVarArgs(mySqls[++n], Integer.valueOf(1));
         Test.test(l != null, typ + n);
 
-        Object[] bindVars = { new Integer(1) };
+        Object[] bindVars = { Integer.valueOf(1) };
         l = sql.getLong(mySqls[++n], bindVars);
         Test.test(l == null, typ + n);
         l = sql.getLong(mySqls[++n], bindVars);
         Test.test(l != null, typ + n);
 
-        Object[] bindVars2a = { null, null, new Integer(1) };
+        Object[] bindVars2a = { null, null, Integer.valueOf(1) };
         int[] sqlTypes2 = { Types.INTEGER, Types.INTEGER, Types.INTEGER };
         l = sql.getLong(mySqls[++n], bindVars2a, sqlTypes2);
         Test.test(l == null, typ + n);
-        Object[] bindVars2b = { new Integer(1), new Integer(2), new Integer(1) };
+        Object[] bindVars2b = { Integer.valueOf(1), Integer.valueOf(2), Integer.valueOf(1) };
         l = sql.getLong(mySqls[++n], bindVars2b, sqlTypes2);
         Test.test(l != null, typ + n);
 
         // getStrings
         Long[] ll = sql.getLongs(mySqls[++n]);
         Test.test(ll != null && ll.length == 100, typ + n);
-        ll = sql.getLongsVarArgs(mySqls[++n], new Integer(0));
+        ll = sql.getLongsVarArgs(mySqls[++n], Integer.valueOf(0));
         Test.test(ll != null && ll.length == 100, typ + n);
-        Object[] bindVars3 = { new Integer(0) };
+        Object[] bindVars3 = { Integer.valueOf(0) };
         ll = sql.getLongs(mySqls[++n], bindVars3);
         Test.test(ll != null && ll.length == 100, typ + n);
 
-        Object[] bindVars4 = { null, null, new Integer(0) };
+        Object[] bindVars4 = { null, null, Integer.valueOf(0) };
         int[] sqlTypes4 = { Types.INTEGER, Types.INTEGER, Types.INTEGER };
         ll = sql.getLongs(mySqls[++n], bindVars4, sqlTypes4);
         Test.test(ll != null && ll.length == 100, typ + n);
@@ -167,34 +167,34 @@ public class TestMySQL implements TestDB {
         l = sql.getBigDecimal(mySqls[++n]);
         Test.test(l != null, typ + n);
 
-        l = sql.getBigDecimalVarArgs(mySqls[++n], new Integer(1));
+        l = sql.getBigDecimalVarArgs(mySqls[++n], Integer.valueOf(1));
         Test.test(l == null, typ + n);
-        l = sql.getBigDecimalVarArgs(mySqls[++n], new Integer(1));
+        l = sql.getBigDecimalVarArgs(mySqls[++n], Integer.valueOf(1));
         Test.test(l != null, typ + n);
 
-        Object[] bindVars = { new Integer(1) };
+        Object[] bindVars = { Integer.valueOf(1) };
         l = sql.getBigDecimal(mySqls[++n], bindVars);
         Test.test(l == null, typ + n);
         l = sql.getBigDecimal(mySqls[++n], bindVars);
         Test.test(l != null, typ + n);
 
-        Object[] bindVars2a = { null, null, new Integer(1) };
+        Object[] bindVars2a = { null, null, Integer.valueOf(1) };
         int[] sqlTypes2 = { Types.INTEGER, Types.INTEGER, Types.INTEGER };
         l = sql.getBigDecimal(mySqls[++n], bindVars2a, sqlTypes2);
         Test.test(l == null, typ + n);
-        Object[] bindVars2b = { new Integer(1), new Integer(2), new Integer(1) };
+        Object[] bindVars2b = { Integer.valueOf(1), Integer.valueOf(2), Integer.valueOf(1) };
         l = sql.getBigDecimal(mySqls[++n], bindVars2b, sqlTypes2);
         Test.test(l != null, typ + n);
 
         // getBigDecimals
         BigDecimal[] ll = sql.getBigDecimals(mySqls[++n]);
         Test.test(ll != null && ll.length == 100, typ + n);
-        ll = sql.getBigDecimalsVarArgs(mySqls[++n], new Integer(0));
+        ll = sql.getBigDecimalsVarArgs(mySqls[++n], Integer.valueOf(0));
         Test.test(ll != null && ll.length == 100, typ + n);
-        Object[] bindVars3 = { new Integer(0) };
+        Object[] bindVars3 = { Integer.valueOf(0) };
         ll = sql.getBigDecimals(mySqls[++n], bindVars3);
         Test.test(ll != null && ll.length == 100, typ + n);
-        Object[] bindVars4 = { null, null, new Integer(0) };
+        Object[] bindVars4 = { null, null, Integer.valueOf(0) };
         int[] sqlTypes4 = { Types.INTEGER, Types.INTEGER, Types.INTEGER };
         ll = sql.getBigDecimals(mySqls[++n], bindVars4, sqlTypes4);
         Test.test(ll != null && ll.length == 100, typ + n);
@@ -214,34 +214,34 @@ public class TestMySQL implements TestDB {
         Test.test(l == null, typ + n);
         l = sql.getTimestamp(mySqls[++n]);
         Test.test(l != null, typ + n);
-        l = sql.getTimestampVarArgs(mySqls[++n], new Integer(1));
+        l = sql.getTimestampVarArgs(mySqls[++n], Integer.valueOf(1));
         Test.test(l == null, typ + n);
-        l = sql.getTimestampVarArgs(mySqls[++n], new Integer(1));
+        l = sql.getTimestampVarArgs(mySqls[++n], Integer.valueOf(1));
         Test.test(l != null, typ + n);
 
-        Object[] bindVars = { new Integer(1) };
+        Object[] bindVars = { Integer.valueOf(1) };
         l = sql.getTimestamp(mySqls[++n], bindVars);
         Test.test(l == null, typ + n);
         l = sql.getTimestamp(mySqls[++n], bindVars);
         Test.test(l != null, typ + n);
 
-        Object[] bindVars2a = { null, null, new Integer(1) };
+        Object[] bindVars2a = { null, null, Integer.valueOf(1) };
         int[] sqlTypes2 = { Types.INTEGER, Types.INTEGER, Types.INTEGER };
         l = sql.getTimestamp(mySqls[++n], bindVars2a, sqlTypes2);
         Test.test(l == null, typ + n);
-        Object[] bindVars2b = { new Integer(1), new Integer(2), new Integer(1) };
+        Object[] bindVars2b = { Integer.valueOf(1), Integer.valueOf(2), Integer.valueOf(1) };
         l = sql.getTimestamp(mySqls[++n], bindVars2b, sqlTypes2);
         Test.test(l != null, typ + n);
 
         // getBigDecimals
         Timestamp[] ll = sql.getTimestamps(mySqls[++n]);
         Test.test(ll != null && ll.length == 100, typ + n);
-        ll = sql.getTimestampsVarArgs(mySqls[++n], new Integer(0));
+        ll = sql.getTimestampsVarArgs(mySqls[++n], Integer.valueOf(0));
         Test.test(ll != null && ll.length == 100, typ + n);
-        Object[] bindVars3 = { new Integer(0) };
+        Object[] bindVars3 = { Integer.valueOf(0) };
         ll = sql.getTimestamps(mySqls[++n], bindVars3);
         Test.test(ll != null && ll.length == 100, typ + n);
-        Object[] bindVars4 = { null, null, new Integer(0) };
+        Object[] bindVars4 = { null, null, Integer.valueOf(0) };
         int[] sqlTypes4 = { Types.DATE, Types.DATE, Types.INTEGER };
         ll = sql.getTimestamps(mySqls[++n], bindVars4, sqlTypes4);
         Test.test(ll != null && ll.length == 100, typ + n);
@@ -262,34 +262,34 @@ public class TestMySQL implements TestDB {
         l = sql.getRaw(mySqls[++n]);
         Test.test(l != null, typ + n);
 
-        l = sql.getRawVarArgs(mySqls[++n], new Integer(1));
+        l = sql.getRawVarArgs(mySqls[++n], Integer.valueOf(1));
         Test.test(l == null, typ + n);
-        l = sql.getRawVarArgs(mySqls[++n], new Integer(1));
+        l = sql.getRawVarArgs(mySqls[++n], Integer.valueOf(1));
         Test.test(l != null, typ + n);
 
-        Object[] bindVars = { new Integer(1) };
+        Object[] bindVars = { Integer.valueOf(1) };
         l = sql.getRaw(mySqls[++n], bindVars);
         Test.test(l == null, typ + n);
         l = sql.getRaw(mySqls[++n], bindVars);
         Test.test(l != null, typ + n);
 
-        Object[] bindVars2a = { null, null, new Integer(1) };
+        Object[] bindVars2a = { null, null, Integer.valueOf(1) };
         int[] sqlTypes2 = { Types.INTEGER, Types.INTEGER, Types.INTEGER };
         l = sql.getRaw(mySqls[++n], bindVars2a, sqlTypes2);
         Test.test(l == null, typ + n);
-        Object[] bindVars2b = { new Integer(1), new Integer(2), new Integer(1) };
+        Object[] bindVars2b = { Integer.valueOf(1), Integer.valueOf(2), Integer.valueOf(1) };
         l = sql.getRaw(mySqls[++n], bindVars2b, sqlTypes2);
         Test.test(l != null, typ + n);
 
         // getRaws
         byte[][] ll = sql.getRaws(mySqls[++n]);
         Test.test(ll != null && ll.length == 100, typ + n);
-        ll = sql.getRawsVarArgs(mySqls[++n], new Integer(0));
+        ll = sql.getRawsVarArgs(mySqls[++n], Integer.valueOf(0));
         Test.test(ll != null && ll.length == 100, typ + n);
-        Object[] bindVars3 = { new Integer(0) };
+        Object[] bindVars3 = { Integer.valueOf(0) };
         ll = sql.getRaws(mySqls[++n], bindVars3);
         Test.test(ll != null && ll.length == 100, typ + n);
-        Object[] bindVars4 = { null, null, new Integer(0) };
+        Object[] bindVars4 = { null, null, Integer.valueOf(0) };
         int[] sqlTypes4 = { Types.VARBINARY, Types.VARBINARY, Types.INTEGER };
         ll = sql.getRaws(mySqls[++n], bindVars4, sqlTypes4);
         Test.test(ll != null && ll.length == 100, typ + n);
